--- a/clase-03/index.html
+++ b/clase-03/index.html
@@ -8,14 +8,17 @@
   <body>
     <h1>Hola! Esto es la tarea de la clase pasada <3</h1>
     <h2 class="text-color">Acá estoy usando una clase</h2>
-    <h2 class="text-color" id="subtitle">
-      Acá estoy usando una clase y un selector
-    </h2>
+    <h2 class="text-color" id="subtitle">Acá estoy usando una clase y un id</h2>
+
+    <h2 class="titulo-rojo">Este es el primer título</h2>
+    <h2 class="titulo-rojo">Este es el segundo título</h2>
+    <h2 class="titulo-rojo">Este es el tercer título</h2>
+    <h2 class="titulo-rojo" id="cuarto-titulo">Este es el cuarto título</h2>
 
     <!--Esta es la forma más utilizada de insertar un mapa de google en nuestro sitio web. Para replicarlo, tenemos que
     ir a google maps y copiar el iFrame que ellos mismos nos proporcionan-->
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15059.379441760595!2d-58.42748931342065!3d-34.57462398010361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57475fd5245%3A0x5eefd3cd753143d7!2sPlanetario%20Galileo%20Galilei!5e0!3m2!1ses-419!2sar!4v1704946133388!5m2!1ses-419!2sar"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.5733497197282!2d-58.4105382110182!3d-34.57515443475597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57a4147c5c7%3A0xfc930bf72fdf871f!2zSmFyZMOtbiBKYXBvbsOpcw!5e0!3m2!1ses-419!2sar!4v1705012850241!5m2!1ses-419!2sar"
       width="600"
       height="450"
       style="border: 0"
