agrega ejemplo de imagen redondeada

--- a/clase-03/index.html
+++ b/clase-03/index.html
@@ -2,18 +2,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Clase 3</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hola! Esto es la tarea de la clase pasada <3</h1>
-    <h2 class="text-color">Acá estoy usando una clase</h2>
+    <h2 class="text-color color-titulo">Acá estoy usando dos clases</h2>
     <h2 class="text-color" id="subtitle">Acá estoy usando una clase y un id</h2>
 
     <h2 class="titulo-rojo">Este es el primer título</h2>
     <h2 class="titulo-rojo">Este es el segundo título</h2>
     <h2 class="titulo-rojo">Este es el tercer título</h2>
     <h2 class="titulo-rojo" id="cuarto-titulo">Este es el cuarto título</h2>
+     
+    <!-- EJEMPLO DE USO DE div: envolvemos una imagen y redondeamos sus bordes -->
+    <div id="contenedor-foto-de-perfil">
+      <img
+        id="foto-de-perfil"
+        src="https://previews.123rf.com/images/yommy8008/yommy80081610/yommy8008161000078/67376530-foto-cuadrada-con-el-retrato-del-gato-peque%C3%B1o-pocas-semanas-de-edad-gatito-gato-con-la-piel-blanca.jpg"
+        alt="gatito blanco"
+      />
+    </div>
 
     <!--Esta es la forma más utilizada de insertar un mapa de google en nuestro sitio web. Para replicarlo, tenemos que
     ir a google maps y copiar el iFrame que ellos mismos nos proporcionan-->
