agrega resolución tarea responsive

--- a/clase-06/resolucion-tarea/index.html
+++ b/clase-06/resolucion-tarea/index.html
@@ -14,13 +14,48 @@
           <a id="nav-logo" href="#">Verti</a>
           <span id="nav-logo-companion">HTML5</span>
         </div>
-        <ul class="nav-subcontainer">
+        <ul id="nav-ul" class="nav-subcontainer">
           <li><a id="nav-first-a" href="#cards-container">Lorem</a></li>
           <li><a href="#cards-container">Ipsum</a></li>
           <li><a href="#cards-container">Dolor</a></li>
           <li><a href="#cards-container">Sit</a></li>
           <li><a href="#cards-container">Amet</a></li>
         </ul>
+        <div id="hamburger-container">
+          <svg
+            id="hamburger-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M4 18L20 18"
+                stroke="#444444"
+                stroke-width="2"
+                stroke-linecap="round"
+              ></path>
+              <path
+                d="M4 12L20 12"
+                stroke="#444444"
+                stroke-width="2"
+                stroke-linecap="round"
+              ></path>
+              <path
+                d="M4 6L20 6"
+                stroke="#444444"
+                stroke-width="2"
+                stroke-linecap="round"
+              ></path>
+            </g>
+          </svg>
+        </div>
       </nav>
     </header>
     <main>
