--- a/clase-05/resolucion-tarea/index.html
+++ b/clase-05/resolucion-tarea/index.html
@@ -24,6 +24,9 @@
       </nav>
     </header>
     <main>
+      <div id="position">
+        <div id="contenedor-hijo"></div>
+      </div>
       <div class="container box-shadow" id="hero-container">
         <div id="hero-text-container">
           <h1>Hi, this is Verti.</h1>
