--- a/clase-06/index.html
+++ b/clase-06/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clase 06</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Method puede tomar dos valores: GET y POST-->
